--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,4 +1,6 @@
 [theme]
-base="dark"
-backgroundColor="#000000"
-secondaryBackgroundColor="#590202"
+primaryColor="#FF4B4B"
+backgroundColor="#FFFFFF"
+secondaryBackgroundColor="#F0F2F6"
+textColor="#31333F"
+font="sans serif"
