--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#FF4B4B"
-backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#F0F2F6"
-textColor="#31333F"
-font="sans serif"
+primaryColor="#BF9A1E"
+backgroundColor="#436773"
+secondaryBackgroundColor="#262730"
+textColor="#FFFFFF"
+font="Monospace"
