--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ ultralytics
 streamlit
 pillow
 streamlit-analytics
+streamlit-screen-stats
+streamlit-local-storage
+streamlit-browser-session-storage
